--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@ name: Run posters script
 
 on:
   schedule:
-    - cron: '0 0 * * 4' # Run every Thursday at midnight (PST)
-    - cron: '0 0 * * 5' # Run every Friday at midnight (PST)
+    - cron: '0 0 * * 5' # Run every Friday at midnight
+    - cron: '0 0 * * 6' # Run every Saturday at midnight
 
 jobs:
   run_posters:
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run posters script on Thursday
-        if: github.event.schedule.cron == '0 0 * * 4'
+        if: github.event.schedule.cron == '0 0 * * 5'
         run: |
           bash scripts/posters.sh omigroup omigroup 4
           bash scripts/create-index.sh
@@ -24,7 +24,7 @@ jobs:
           git push origin main
 
       - name: Run posters script on Friday
-        if: github.event.schedule.cron == '0 0 * * 5'
+        if: github.event.schedule.cron == '0 0 * * 6'
         run: |
           bash scripts/posters.sh omigroup gltf-extensions 4
           bash scripts/create-index.sh
