--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
         run: |
           bash scripts/posters.sh omigroup omigroup 4
           bash scripts/create-index.sh
+          bash scripts/pdf.sh omigroup
           git config --global user.name "madjin"
           git config --global user.email "32600939+madjin@users.noreply.github.com"
           git add -A .
@@ -28,6 +29,7 @@ jobs:
         run: |
           bash scripts/posters.sh omigroup gltf-extensions 4
           bash scripts/create-index.sh
+          bash scripts/pdf.sh gltf-extensions
           git config --global user.name "madjin"
           git config --global user.email "32600939+madjin@users.noreply.github.com"
           git add -A .
