--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,15 +19,24 @@ jobs:
           echo "machine github.com login $GH_TOKEN" > ~/.netrc
           gh config set prompt disabled
 
-      - name: Run posters script on Thursday
+      - name: Update omigroup
         run: |
           bash scripts/posters.sh omigroup omigroup 4
-          bash scripts/posters.sh omigroup gltf-extensions 4
           bash scripts/create-index.sh
           bash scripts/pdf.sh omigroup
+          git config --global user.name "madjin"
+          git config --global user.email "32600939+madjin@users.noreply.github.com"
+          git add -A .
+          git commit -m "update omigroup weekly notes"
+          git push origin main
+      
+      - name: Update omigroup gltf-extensions
+        run: |
+          bash scripts/posters.sh omigroup gltf-extensions 4
+          bash scripts/create-index.sh
           bash scripts/pdf.sh gltf-extensions
           git config --global user.name "madjin"
           git config --global user.email "32600939+madjin@users.noreply.github.com"
           git add -A .
-          git commit -m "Run action runner"
+          git commit -m "update omigroup gltf-extensions notes"
           git push origin main
