--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Update omigroup
+        env:
+          GITHUB_TOKEN: ${{ secrets.OMI_SECRET }}
         run: |
           bash scripts/posters.sh omigroup omigroup 4
           bash scripts/create-index.sh
@@ -25,6 +27,8 @@ jobs:
           git commit -m "update omigroup weekly notes"
       
       - name: Update omigroup gltf-extensions
+        env:
+          GITHUB_TOKEN: ${{ secrets.OMI_SECRET }}
         run: |
           bash scripts/posters.sh omigroup gltf-extensions 4
           bash scripts/create-index.sh
