--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,6 @@
 name: Run posters script
 
-on:
-  schedule:
-    - cron: '59 23 * * 4' # Run every Thursday at 11:59 PM
+on: [push]
 
 jobs:
   run_posters:
