--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Update omigroup
         env:
-          GITHUB_TOKEN: ${{ secrets.OMI_SECRET }}
+          GH_TOKEN: ${{ secrets.OMI_SECRET }}
         run: |
           bash scripts/posters.sh omigroup omigroup 4
           bash scripts/create-index.sh
@@ -22,7 +22,7 @@ jobs:
       
       - name: Update omigroup gltf-extensions
         env:
-          GITHUB_TOKEN: ${{ secrets.OMI_SECRET }}
+          GH_TOKEN: ${{ secrets.OMI_SECRET }}
         run: |
           bash scripts/posters.sh omigroup gltf-extensions 4
           bash scripts/create-index.sh
