manually add backlog for omigroup

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-GITHUB_TOKEN=$OMI_SECRET
+GITHUB_TOKEN=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
